button with routing to profile component

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -7,6 +7,6 @@
         <a class="nav-link" [routerLink]="['users/login']" *ngIf="!this.loggedUser">Log in</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="nav-link" [routerLink]="['home']" *ngIf="this.loggedUser" (click)="this.logout()">Log out</a>
-        <button *ngIf="this.loggedUser">{{loggedUser.username}} profile</button>
+        <button *ngIf="this.loggedUser" (click)="this.goToProfile()">{{loggedUser.username}} profile</button>
     </div>
 </nav>
