--- a/client/src/app/users/register/register.component.html
+++ b/client/src/app/users/register/register.component.html
@@ -5,23 +5,21 @@
       </mat-card-header>
       <mat-card-content>
         <form [formGroup]="this.registerForm" (ngSubmit)="this.register(this.registerForm.value)">
+
           <mat-form-field>
             <input matInput placeholder="Username" name="username" required class="register-input"
               formControlName="username">
-  
             <mat-error *ngIf="!!this.registerForm.controls.username.errors?.required">
               The username is required!
             </mat-error>
             <mat-error *ngIf="!!this.registerForm.controls.username.errors?.minlength">
               The username must be at least 2 symbols long!
             </mat-error>
-  
-  
           </mat-form-field>
+
           <mat-form-field>
             <input matInput placeholder="Password" type="password" name="password" required class="register-input"
               formControlName="password">
-  
             <mat-error *ngIf="!!this.registerForm.controls.password.errors?.required">
               The password is required!
             </mat-error>
@@ -31,8 +29,17 @@
             <mat-error *ngIf="!!this.registerForm.controls.password.errors?.minlength">
               The password must be at least 6 symbols!
             </mat-error>
-  
           </mat-form-field>
+
+          <mat-form-field>
+              <input matInput type="password" placeholder="Confirm password" formControlName="password2" [errorStateMatcher]="this.confirmErrorMatcher" >
+              <mat-error *ngIf="!!this.registerForm.controls.password2.errors?.required">
+                Confirming the password is required!
+              </mat-error>
+              <mat-error *ngIf="!!this.registerForm.errors?.passwordMismatch">
+                The passwords do not match!
+              </mat-error>
+            </mat-form-field>
   
           <mat-form-field>
             <input matInput placeholder="Email" name="email" required class="register-input" formControlName="email">
