--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,4 @@
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import "themes";  // <-- ADD THIS LINE
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
