#9 basic structure for homepage added

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,2 +1,5 @@
-<p>home works!</p>
+<div class="home-container">
+    <app-all-posts></app-all-posts>
+</div>
+
 <img src="https://image.flaticon.com/icons/png/512/23/23665.png">
