#9 public posts are now shown on the homepage

--- a/client/src/app/posts/all-posts/all-posts.component.html
+++ b/client/src/app/posts/all-posts/all-posts.component.html
@@ -1,11 +1,11 @@
-<p>Posts works!</p>
+What's new in our quantum universe:
 
-<!-- <div class="all-posts-container">
+<div class="all-posts-container">
 
-  <app-create-post (toCreatePost)="this.createPost($event)"></app-create-post>
+  <!-- <app-create-post (toCreatePost)="this.createPost($event)"></app-create-post> -->
   <div class="posts-list">
-    <app-post-info *ngFor="let post of this.posts" [post]="post" class="one-post">
-    </app-post-info>
+    <app-single-post-in-list *ngFor="let post of this.posts" [post]="post" class="one-post">
+    </app-single-post-in-list>
 
   </div>
-</div> -->
+</div>
