#9 create post basic structure added

--- a/client/src/app/posts/all-posts/all-posts.component.html
+++ b/client/src/app/posts/all-posts/all-posts.component.html
@@ -2,7 +2,8 @@ What's new in our quantum universe:
 
 <div class="all-posts-container">
 
-  <!-- <app-create-post (toCreatePost)="this.createPost($event)"></app-create-post> -->
+  <app-create-post></app-create-post>
+
   <div class="posts-list">
     <app-single-post-in-list *ngFor="let post of this.posts" [post]="post" class="one-post">
     </app-single-post-in-list>
