angular dynamic themes

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,4 @@
-@import "themes";  // <-- ADD THIS LINE
+@import "themes"; 
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
