test change themes btn

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
 <p> Website works :D </p>
 <router-outlet></router-outlet>
+<button mat-button (click)="this.toggleDarkness()">Dark/light</button>
+
 
