--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
-<nav class="navbar">
+<mat-toolbar class="main_nav">My Toolbar</mat-toolbar>
+
+<!-- <nav class="navbar">
     <div class="navbar-elements">
   <a class="navbar-logo" href="/home"><img id="logo" src="../../assets/logo.png" alt=""></a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -9,4 +11,4 @@
         <a class="nav-link" [routerLink]="['home']" *ngIf="this.loggedUser" (click)="this.logout()">Log out</a>
         <button *ngIf="this.loggedUser" (click)="this.goToProfile()">{{loggedUser.username}} profile</button>
     </div>
-</nav>
+</nav> -->
