--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,5 @@
-@import "themes"; 
+@import "themes";
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
