--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,4 +1,21 @@
-<mat-toolbar class="main_nav">My Toolbar</mat-toolbar>
+<mat-toolbar class="main_nav">
+    <div class="navbar-elements">
+        <a class="navbar-logo" href="/home"><img id="logo" src="../../assets/logo.png" alt=""></a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a class="nav-link" [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a class="nav-link" [routerLink]="['users/login']" *ngIf="!this.loggedUser">Log in</a>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a class="nav-link" [routerLink]="['home']" *ngIf="this.loggedUser" (click)="this.logout()">Log out</a>
+              <button *ngIf="this.loggedUser" (click)="this.goToProfile()">{{loggedUser.username}} profile</button>
+              
+              <button mat-icon-button>
+                  <i class="material-icons">
+                      android
+                      </i>
+              </button>
+          </div>
+  </mat-toolbar>
 
 <!-- <nav class="navbar">
     <div class="navbar-elements">
