--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-header></app-header>
+<app-header (changeTheme)="this.toggleDarkness($event)"></app-header>
 <p> Website works :D </p>
 <router-outlet></router-outlet>
-<button mat-button (click)="this.toggleDarkness()">Dark/light</button>
+
 
 
