btn for theme change to navbar

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -13,6 +13,7 @@
                       android
                       </i>
               </button>
+              <button mat-button (click)="this.onClickChangeTheme()">Dark/light</button>
           </div>
 
 
