getting and posting comments works

--- a/client/src/app/posts/single-post-in-list/single-post-in-list.component.html
+++ b/client/src/app/posts/single-post-in-list/single-post-in-list.component.html
@@ -7,6 +7,7 @@
         Content: {{ this.postToShow.content }} <br />
         Posted on: {{ this.postToShow.dateCreated }}<br />
         By: {{ this.postToShow.author }}<br />
+        Private? {{ this.postToShow.isPrivate }}
       </div>
     </mat-card>
   </div>
