--- a/client/src/app/posts/create-post/create-post.component.html
+++ b/client/src/app/posts/create-post/create-post.component.html
@@ -22,7 +22,7 @@
 
     <input type="file" (change)="this.onFileChange($event)" accept="image/*" />
 
-    <button mat-icon-button class="create-post-button" type="submit" [disabled]="this.createPostForm.invalid || this.createPostUrl === undefined">
+    <button mat-icon-button class="create-post-button" type="submit" [disabled]="this.createPostForm.invalid || this.fileToUpload === undefined">
       Create Post
       <i class="material-icons">
         book
