responsive sidenav container

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,12 +1,32 @@
-<nav class="navbar">
-    <div class="navbar-elements">
-  <a class="navbar-logo" href="/home"><img id="logo" src="../../assets/logo.png" alt=""></a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="nav-link" [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="nav-link" [routerLink]="['users/login']" *ngIf="!this.loggedUser">Log in</a>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="nav-link" [routerLink]="['home']" *ngIf="this.loggedUser" (click)="this.logout()">Log out</a>
-        <button *ngIf="this.loggedUser" (click)="this.goToProfile()">{{loggedUser.username}} profile</button>
-    </div>
-</nav>
+<mat-sidenav-container class="sidenav-container">
+
+    <mat-sidenav #drawer class="sidenav" [ngClass]="{hidden: !(isHandset | async)!.matches}" fixedInViewport="false" [attr.role]="isHandset ? 'dialog' : 'navigation'"
+      [mode]="(isHandset | async)!.matches ? 'over' : 'side'" [opened]="!(isHandset | async)!.matches">
+      <mat-toolbar color="secondary">Menu</mat-toolbar>
+      <mat-nav-list>
+        <a mat-list-item [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
+        <a mat-list-item [routerLink]="['users/login']" *ngIf="!this.loggedUser">Login</a>
+        <a mat-list-item  *ngIf="this.loggedUser" (click)="this.logout()">Logout</a>
+        <a mat-list-item [routerLink]="['home']">Home</a>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+      <mat-toolbar color="primary">
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="(isHandset | async)!.matches">
+          <mat-icon aria-label="Side nav toggle icon">menu
+          </mat-icon>
+        </button>
+        <span>11Forward</span>
+        <span class="spacer"></span>
+        <span *ngIf="!(isHandset | async)!.matches">
+          <a mat-list-item [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
+        <a mat-list-item [routerLink]="['users/login']" *ngIf="!this.loggedUser">Login</a>
+        <a mat-list-item  *ngIf="this.loggedUser" (click)="this.logout()">Logout</a>
+        <a mat-list-item [routerLink]="['home']">Home</a>
+        </span>
+      </mat-toolbar>
+      <ng-content></ng-content>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+
