--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -6,6 +6,7 @@
       <mat-nav-list>
         <a mat-list-item [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
         <a mat-list-item [routerLink]="['users/login']" *ngIf="!this.loggedUser">Login</a>
+        <a mat-list-item  *ngIf="this.loggedUser" (click)="this.goToProfile()">Profile</a>
         <a mat-list-item  *ngIf="this.loggedUser" (click)="this.logout()">Logout</a>
         <a mat-list-item [routerLink]="['home']">Home</a>
       </mat-nav-list>
@@ -20,8 +21,9 @@
         <span>11Forward</span>
         <span class="spacer"></span>
         <span *ngIf="!(isHandset | async)!.matches">
-          <a mat-list-item [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
+        <a mat-list-item [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
         <a mat-list-item [routerLink]="['users/login']" *ngIf="!this.loggedUser">Login</a>
+        <a mat-list-item  *ngIf="this.loggedUser" (click)="this.goToProfile()">Profile</a>
         <a mat-list-item  *ngIf="this.loggedUser" (click)="this.logout()">Logout</a>
         <a mat-list-item [routerLink]="['home']">Home</a>
         </span>
