--- a/client/src/app/users/profile/profile.component.html
+++ b/client/src/app/users/profile/profile.component.html
@@ -1,4 +1,4 @@
 
 
 <app-profile-info [profile]="this.loggedUser"></app-profile-info>
-<app-profile-gallery></app-profile-gallery>
+<app-profile-gallery [galeryPosts] ="this.profilePosts" ></app-profile-gallery>
