basic comments structure created

--- a/client/src/app/posts/single-post-comments/single-post-comments.component.html
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.html
@@ -11,8 +11,8 @@
       </div>
     </mat-card>
   </div>
+  <mat-card class="mat-card">
+    <app-all-comments></app-all-comments>
+  </mat-card>
 </div>
 
-<!-- <mat-card class="mat-card">
-        <app-comments></app-comments>
-      </mat-card> -->
