--- a/client/src/app/comments/all-comments/all-comments.component.html
+++ b/client/src/app/comments/all-comments/all-comments.component.html
@@ -1,1 +1,10 @@
-<p>all-comments works!</p>
+<div class="all-posts-container">
+
+  <app-create-comment *ngIf="this.loggedUser" (toCreateComment)="this.createComment($event)"></app-create-comment>
+
+  <div class="comments-list">
+    <app-single-comment *ngFor="let comment of this.comments" [comment]="comment" class="one-comment">
+    </app-single-comment>
+
+  </div>
+</div>
