--- a/client/src/app/users/profile/profile-info/profile-info.component.html
+++ b/client/src/app/users/profile/profile-info/profile-info.component.html
@@ -29,16 +29,17 @@
       <mat-card-header>
         <div mat-card-avatar ></div>
         <mat-card-title>{{profile.username}}</mat-card-title>
+        <mat-card-subtitle>{{profile.email}}</mat-card-subtitle>
       </mat-card-header>
       <img mat-card-image class="example-header-image" src="https://creai-grand-est.fr/bundles/admin/images/user-empty-avatar.png">
       <mat-card-actions>
-          <button mat-button>EDIT PROFILE</button>
+          <button mat-button *ngIf="this.isOwner">EDIT PROFILE</button>
       </mat-card-actions>
   </mat-card>
 
   <mat-toolbar class='profile-navbar'>
       <span>My Tools</span>
-      <button mat-raised-button>Add Pic</button>
+      <button mat-raised-button *ngIf="this.isOwner">Add Pic</button>
       <button mat-raised-button>Followers</button>
       <button mat-raised-button>Following</button>
   </mat-toolbar>
