outlet for visualizing gallery/followers/following

--- a/client/src/app/users/profile/profile.component.html
+++ b/client/src/app/users/profile/profile.component.html
@@ -2,4 +2,6 @@
 
 <app-profile-info [profile]="this.profileInfo"></app-profile-info>
 
+<router-outlet></router-outlet>
+
 <!-- <app-profile-gallery [galeryPosts] ="this.profilePosts" ></app-profile-gallery> -->
