--- a/client/src/app/users/profile/profile-gallery/profile-gallery.component.html
+++ b/client/src/app/users/profile/profile-gallery/profile-gallery.component.html
@@ -1,5 +1,5 @@
 
-<!-- <app-single-post-in-list *ngFor="let post of this.galeryPosts" [post]="post" class="one-post">
-  </app-single-post-in-list> -->
+ <app-single-post-in-list *ngFor="let post of this.profilePosts" [post]="post" class="one-post">
+  </app-single-post-in-list>
 
-  Gallery works!
+
