--- a/client/src/app/posts/all-posts/all-posts.component.html
+++ b/client/src/app/posts/all-posts/all-posts.component.html
@@ -5,7 +5,8 @@ What's new in our quantum universe:
   <app-create-post *ngIf="this.loggedUser" (toCreatePost)="this.createPost($event)"></app-create-post>
 
   <div class="posts-list">
-    <app-single-post-in-list *ngFor="let post of this.posts" [post]="post" class="one-post">
+    <app-single-post-in-list *ngFor="let post of this.posts" [post]="post" class="one-post"
+    (deletePost)="this.deletePost($event)">
     </app-single-post-in-list>
 
   </div>
