--- a/client/src/app/comments/all-comments/all-comments.component.html
+++ b/client/src/app/comments/all-comments/all-comments.component.html
@@ -3,7 +3,8 @@
   <app-create-comment *ngIf="this.loggedUser" (toCreateComment)="this.createComment($event)"></app-create-comment>
 
   <div class="comments-list">
-    <app-single-comment *ngFor="let comment of this.comments" [comment]="comment" class="one-comment">
+    <app-single-comment *ngFor="let comment of this.comments" [comment]="comment" class="one-comment"
+    (deleteComment)="this.deleteComment($event)">
     </app-single-comment>
 
   </div>
