implementing profile cards+ styling

--- a/client/src/app/users/profile/proile-following/proile-following.component.html
+++ b/client/src/app/users/profile/proile-following/proile-following.component.html
@@ -1,1 +1,8 @@
-<p>proile-following works!</p>
+<div class="container">
+    <div  *ngFor="let followee of profileFollowing">
+        <app-profile-card [profileInfo]="this.followee"></app-profile-card>
+    </div>
+</div>
+
+
+
