--- a/client/src/app/users/profile/proile-followers/proile-followers.component.html
+++ b/client/src/app/users/profile/proile-followers/proile-followers.component.html
@@ -1,1 +1,10 @@
-<p>proile-followers works!</p>
+<div class="container">
+
+    <div *ngFor="let follower of profileFollowers">
+        <app-profile-card [profileInfo]="this.follower"></app-profile-card>
+    </div>
+
+</div>
+
+
+
