--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
@@ -8,6 +8,7 @@
         Posted on: {{ this.postToShow.dateCreated }}<br />
         By: {{ this.postToShow.author }}<br />
         Private? {{ this.postToShow.isPrivate }}<br />
+        Comments: {{ this.postToShow.commentsCount }}<br />
         <button (click)="this.openSinglePost()">Open me</button>
       </div>
       <button mat-icon-button (click)="this.onDeletePost()"
