--- a/client/src/app/comments/create-comment/create-comment.component.html
+++ b/client/src/app/comments/create-comment/create-comment.component.html
@@ -7,7 +7,7 @@
       </mat-error>
     </mat-form-field>
 
-    <button mat-icon-button class="create-post-button" type="submit" [disabled]="this.createCommentForm.invalid">
+    <button mat-icon-button class="create-comment-button" type="submit" [disabled]="this.createCommentForm.invalid">
       <i class="material-icons">
         book
       </i>
