--- a/client/src/app/comments/single-comment/single-comment.component.html
+++ b/client/src/app/comments/single-comment/single-comment.component.html
@@ -6,7 +6,7 @@
         Posted on: {{ this.commentToShow.dateCreated }}<br />
         By: {{ this.commentToShow.author }}<br />
       </div>
-      <button mat-icon-button (click)="this.turnOnUpdateCommentForm()"
+      <button mat-icon-button (click)="this.turnOnOffUpdateCommentForm()"
       *ngIf="this.loggedUser && this.loggedUser.username === this.commentToShow.author">
         <i class="material-icons">
           build
@@ -28,7 +28,7 @@
           </mat-error>
         </mat-form-field>
     
-        <button mat-icon-button class="create-post-button" type="submit" [disabled]="this.updateCommentForm.invalid">
+        <button mat-icon-button class="update-comment-button" type="submit" [disabled]="this.updateCommentForm.invalid">
           <i class="material-icons">
             book
           </i>
