--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,2 +1,8 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+#toast-container > .toast-success {
+    font-size: 14px;
+    font-family: 'Arial';
+    opacity: 1;
+}
