event emitter for follow/unfollow

--- a/client/src/app/users/profile/profile.component.html
+++ b/client/src/app/users/profile/profile.component.html
@@ -1,7 +1,7 @@
 
 
-<app-profile-info [profile]="this.profileInfo"></app-profile-info>
+<app-profile-info [profile]="this.profileInfo" (followUnfollow)="this.followUnfollow($event)"></app-profile-info>
 
 <router-outlet></router-outlet>
 
-<!-- <app-profile-gallery [galeryPosts] ="this.profilePosts" ></app-profile-gallery> -->
+
