--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
@@ -11,12 +11,21 @@
         Comments: {{ this.postToShow.commentsCount }}<br />
         <button (click)="this.openSinglePost()">Open me</button>
       </div>
+      <button mat-icon-button (click)="this.turnOnOffUpdatePostForm()"
+      *ngIf="this.loggedUser && this.loggedUser.username === this.postToShow.author">
+        <i class="material-icons">
+          build
+        </i>
+      </button>
       <button mat-icon-button (click)="this.onDeletePost()"
       *ngIf="this.loggedUser && this.loggedUser.username === this.postToShow.author">
         <i class="material-icons">
           remove_circle
         </i>
       </button>
+    </mat-card>
+    <mat-card>
+      <app-update-post *ngIf="this.isPostForUpdate===true" (toUpdatePost)="this.updatePost($event)" [val]="this.postToShow.id"></app-update-post>
     </mat-card>
   </div>
 </div>
