--- a/client/src/app/posts/single-post-comments/single-post-comments.component.html
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.html
@@ -10,6 +10,12 @@
         Private? {{ this.post.isPrivate }}<br />
         Comments: {{ this.post.commentsCount }}<br />
       </div>
+      <button mat-icon-button (click)="this.turnOnOffUpdatePostForm()"
+      *ngIf="this.loggedUser && this.loggedUser.username === this.post.author">
+        <i class="material-icons">
+          build
+        </i>
+      </button>
       <button mat-icon-button (click)="this.onDeletePost()"
       *ngIf="this.loggedUser && this.loggedUser.username === this.post.author">
         <i class="material-icons">
@@ -24,7 +30,8 @@
     </mat-card>
   </div>
   <mat-card>
-    <app-update-post *ngIf="this.isPostForUpdate===true"></app-update-post>
+    <app-update-post *ngIf="this.isPostForUpdate===true"
+    (toUpdatePost)="this.updatePost($event)" [val]="this.post.id"></app-update-post>
   </mat-card>
   <mat-card class="mat-card">
     <app-all-comments></app-all-comments>
