you can now like posts from the single post page

--- a/client/src/app/posts/single-post-comments/single-post-comments.component.html
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.html
@@ -22,11 +22,11 @@
           remove_circle
         </i>
       </button>
-      <!-- <button mat-icon-button>
+      <button mat-icon-button>
         <i class="material-icons" (click)="this.onLikePost()">
           thumb_up
         </i>
-      </button> {{ this.post.likes }} -->
+      </button> {{ this.post.likes }}
     </mat-card>
   </div>
   <mat-card>
