--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
@@ -23,6 +23,11 @@
           remove_circle
         </i>
       </button>
+      <button mat-icon-button *ngIf="this.loggedUser" (click)="this.onLikePost()">
+        <i class="material-icons">
+          thumb_up
+        </i>
+      </button> {{ this.postToShow.likes }}
     </mat-card>
     <mat-card>
       <app-update-post *ngIf="this.isPostForUpdate===true"
