--- a/client/src/app/posts/all-posts/all-posts.component.html
+++ b/client/src/app/posts/all-posts/all-posts.component.html
@@ -7,6 +7,7 @@ What's new in our quantum universe:
   <div class="posts-list">
     <app-single-post-in-list *ngFor="let post of this.posts" [post]="post" class="one-post"
     (toUpdatePost)="this.updatePost($event)"
+    (toLikePost)="this.likePost($event)"
     (deletePost)="this.deletePost($event)">
     </app-single-post-in-list>
 
