likebtn now shows always,but only lgd-usr can like

--- a/client/src/app/comments/single-comment/single-comment.component.html
+++ b/client/src/app/comments/single-comment/single-comment.component.html
@@ -18,7 +18,7 @@
           remove_circle
         </i>
       </button>
-      <button mat-icon-button *ngIf="this.loggedUser" (click)="this.onLikeComment()">
+      <button mat-icon-button (click)="this.onLikeComment()">
         <i class="material-icons">
           thumb_up
         </i>
