--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
@@ -23,7 +23,7 @@
           remove_circle
         </i>
       </button>
-      <button mat-icon-button *ngIf="this.loggedUser" (click)="this.onLikePost()">
+      <button mat-icon-button (click)="this.onLikePost()">
         <i class="material-icons">
           thumb_up
         </i>
