--- a/client/src/app/comments/single-comment/single-comment.component.html
+++ b/client/src/app/comments/single-comment/single-comment.component.html
@@ -1,11 +1,44 @@
 <div *ngIf="(this.commentToShow)" class="comment-info-container">
-        <div class="single-comment-in-list-container" comment="comment.content">
-          <mat-card>
-            <div class="comment-item">
-              Content: {{ this.commentToShow.content }} <br />
-              Posted on: {{ this.commentToShow.dateCreated }}<br />
-              By: {{ this.commentToShow.author }}<br />
-            </div>
-          </mat-card>
-        </div>
+  <div class="single-comment-in-list-container" comment="comment.content">
+    <mat-card>
+      <div class="comment-item">
+        Content: {{ this.commentToShow.content }} <br />
+        Posted on: {{ this.commentToShow.dateCreated }}<br />
+        By: {{ this.commentToShow.author }}<br />
       </div>
+      <button mat-icon-button (click)="this.turnOnOffUpdateCommentForm()"
+      *ngIf="this.loggedUser && this.loggedUser.username === this.commentToShow.author">
+        <i class="material-icons">
+          build
+        </i>
+      </button>
+      <button mat-icon-button (click)="this.onDeleteComment()"
+        *ngIf="this.loggedUser && this.loggedUser.username === this.commentToShow.author">
+        <i class="material-icons">
+          remove_circle
+        </i>
+      </button>
+      <button mat-icon-button (click)="this.onLikeComment()">
+        <i class="material-icons">
+          thumb_up
+        </i>
+      </button> {{ this.commentToShow.likes }}
+    </mat-card>
+    <mat-card *ngIf="this.isCommentForUpdate === true">
+      <form [formGroup]="this.updateCommentForm" (ngSubmit)="this.onUpdateComment(this.updateCommentForm.value)">
+        <mat-form-field>
+          <input matInput placeholder="Write new comment here" required formControlName="content">
+          <mat-error *ngIf="!!this.updateCommentForm.controls.content.errors?.required">
+            Some content is required!
+          </mat-error>
+        </mat-form-field>
+    
+        <button mat-icon-button class="update-comment-button" type="submit" [disabled]="this.updateCommentForm.invalid">
+          <i class="material-icons">
+            book
+          </i>
+        </button>
+      </form>
+    </mat-card>
+  </div>
+</div>
