--- a/client/src/app/users/profile/profile-info/profile-info.component.html
+++ b/client/src/app/users/profile/profile-info/profile-info.component.html
@@ -16,7 +16,7 @@
 
   <mat-toolbar class='profile-navbar'>
       <span>My Tools</span>
-      <button mat-raised-button>Add Pic</button>
+      <button *ngIf="this.profile.isOwner" mat-raised-button (click)="openDialog()">Add Pic</button>
       <button mat-raised-button [routerLink]="['posts']">Pics</button>
       <button mat-raised-button [routerLink]="['followers']">Followers</button>
       <button mat-raised-button [routerLink]="['following']">Following</button>
