--- a/client/src/app/posts/all-posts/all-posts.component.html
+++ b/client/src/app/posts/all-posts/all-posts.component.html
@@ -1,15 +1,15 @@
-What's new in our quantum universe:
+<div class="main" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
+  What's new in our quantum universe:
+  <div class="all-posts-container">
 
-<div class="all-posts-container">
+    <button *ngIf="this.loggedUser" mat-stroked-button color="primary" (click)="this.openDialog()">Create post</button>
 
-<button *ngIf="this.loggedUser" mat-stroked-button color="primary" (click)="this.openDialog()">Create post</button>
+    <div class="posts-list">
+      <app-single-post-in-list *ngFor="let post of this.posts" [post]="post" class="one-post"
+        (toUpdatePost)="this.updatePost($event)" (toLikePost)="this.likePost($event)"
+        (deletePost)="this.deletePost($event)">
+      </app-single-post-in-list>
 
-  <div class="posts-list">
-    <app-single-post-in-list *ngFor="let post of this.posts" [post]="post" class="one-post"
-    (toUpdatePost)="this.updatePost($event)"
-    (toLikePost)="this.likePost($event)"
-    (deletePost)="this.deletePost($event)">
-    </app-single-post-in-list>
-
+    </div>
   </div>
 </div>
