--- a/client/src/app/posts/single-post-comments/single-post-comments.component.html
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.html
@@ -34,7 +34,7 @@
     (toUpdatePost)="this.updatePost($event)" [val]="this.post.id"></app-update-post>
   </mat-card>
   <mat-card class="mat-card">
-    <app-all-comments></app-all-comments>
+    <app-all-comments (hasCreatedComment)="this.hasNewComment($event)"></app-all-comments>
   </mat-card>
 </div>
 
