--- a/client/src/app/users/profile/profile-gallery/profile-gallery.component.html
+++ b/client/src/app/users/profile/profile-gallery/profile-gallery.component.html
@@ -1,5 +1,5 @@
-
+<div class="main" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
  <app-single-post-in-list *ngFor="let post of this.profilePosts" [post]="post" class="one-post">
   </app-single-post-in-list>
-
+</div>
 
